Completely rework playback thread tracking